--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./src/styles.css">
-  <title>Document</title>
+  <link rel="shortcut icon" href="./public/favicon.ico" type="image/x-icon">
+  <title>Did you know</title>
 </head>
 
 <body>
